# Efferra

./: .gitignore  CLAUDE.md  DOMAIN.md  ENVIRONMENT.md  Makefile  PAYMENTS.md  PLAN.md  README.md
.claude/skills/: README.md
.claude/skills/branch-pr-review-closeout/: SKILL.md
.claude/skills/django-admin-customization/: SKILL.md
.claude/skills/django-api-slice/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/i18n-content-implementation/: SKILL.md
.claude/skills/makefile-maintainer/: SKILL.md
.claude/skills/mollie-payments-contract/: SKILL.md
.claude/skills/nuxt-page-slice/: SKILL.md
.claude/skills/phase-0-backend-bootstrap/: SKILL.md
.claude/skills/phase-planning-card-breakdown/: SKILL.md
.claude/skills/private-public-mirror-safety/: SKILL.md
.claude/skills/vibe-kanban-task-execution/: SKILL.md
.github/workflows/: publish-public.yml
backend/: .env.example  pyproject.toml
backend/cart/: admin.py  models.py  tests.py
backend/cart/migrations/: 0001_initial.py
backend/catalog/: models.py
backend/catalog/migrations/: 0001_initial_catalog_models.py
backend/config/: settings.py
backend/orders/: admin.py  models.py  tests.py
backend/orders/migrations/: 0001_initial.py  0002_order_reservation_expires_at_alter_order_status.py
backend/payments/: admin.py  models.py  tests.py  views.py
backend/payments/migrations/: 0001_initial.py
frontend/: .env.example  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/i18n/locales/: de.json  en.json  fr.json  nl.json
frontend/pages/: index.vue
