[project]
name = "efferra-backend"
version = "0.1.0"
description = "Django backend for Efferra luxury candle webshop"
authors = [
    {name = "Efferra", email = "dev@efferra.com"},
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = ">=5.1,<6.0"
django-environ = ">=0.12,<0.13"
psycopg = {version = ">=3.1,<4.0", extras = ["binary"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
